Animación de Plotly controlada con el scroll

--- a/www/story_steps.html
+++ b/www/story_steps.html
@@ -1,41 +1,41 @@
 
-	<div class="step" data-step="slide-1">
+	<div class="step" data-step="step1">
 		<p>La problación mundial, con datos de 2019, es de <strong style="color:#73af48">7.673 millones</strong> de
 			personas.
 			Pero, ¿todas pueden encender la luz? ¿Todas tienen acceso a la electricidad?</p>
 	</div>
-	<div class="step" data-step="slide-2">
+	<div class="step" data-step="step2">
 		<p>En el mundo hay <strong style="color:#6f4070">759 millones</strong> de personas sin acceso a la electricidad.
 		</p>
 	</div>
 
-	<div class="step" data-step="slide-3">
+	<div class="step" data-step="step1">
 		<p><strong style="color:#6f4070">759 millones</strong> de personas son 346 millones
 			más que toda la población de la Unión Europea.</p>
 	</div>
 
-	<div class="step" data-step="slide-4">
+	<div class="step" data-step="step2">
 		<p>Y más del doble de la población de EE.UU.</p>
 	</div>
 
-	<div class="step" data-step="slide-5">
+	<div class="step" data-step="step1">
 		<p>Sin embargo la situación ha mejorado, sobre todo desde el año 2011,
 			pasando de 1.249 millones a 759 millones de personas sin acceso a la electricidad.</p>
 	</div>
 
-	<div class="step" data-step="slide-6">
+	<div class="step" data-step="step2">
 		<p>Esta mejora no se ha producido en todo el mundo.
 			En los países del <strong style="color:#a6761d">Afríca subsaharina</strong>, desde el 2007,
 			ha aumentado la población sin acceso a la electricidad.</p>
 	</div>
 
-	<div class="step" data-step="slide-7">
+	<div class="step" data-step="step1">
 		<p>Si no se intesifican considerablemante los esfuerzos en los países con los mayores déficits, el mundo
 			seguirá sin poder garantizar el acceso universal a energía asequible para 2030.
 		</p>
 	</div>
 
-	<div class="step" data-step="slide-8">
+	<div class="step" data-step="step2">
 		<p>Con las políticas actuales y las planificadas se estima que <strong style="color:#6f4070">660
 				millones</strong>
 			de personas, la mayoría en Africa subsaharina, seguirán sin tener acceso a la electricidad en 2030.
